<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetKawaii</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_tweet">Make tweet</string>
    <string name="search_tweet">Search tweets</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="refresh_token">Refresh</string>
    <string name="title_activity_login">TweetKawaii</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_home"></string>
    <string name="create_tweet">Creat tweet</string>
    <string name="timeline">TimeLine</string>
    <string name="user_details_title">User</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="following_text">Following:</string>
    <string name="followers_text">Followers:</string>
    <string name="sendedTweets_text">Send Tweets:</string>
    <string name="name">name</string>
    <string name="retweet">Retweet</string>
    <string name="search_hint">Use @ in your search to search for users</string>
    <string name="follow">Follow</string>
    <string name="desc">"Plaatje"</string>

</resources>
