<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.networkservices.HomeActivity" >
	
    
   <item android:id="@+id/action_userProfile" 
        android:title="@string/user_details_title"
        android:icon="@drawable/ic_person_white_24dp"
        android:showAsAction="always"/> 
        
   <item android:id="@+id/action_search" 
        android:title="@string/search_tweet"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"/> 
        
  	<item android:id="@+id/action_createtweet" 
        android:title="@string/create_tweet"
        android:icon="@drawable/ic_add_white_48dp"
        android:showAsAction="always"
    /> 
        
   <item android:id="@+id/action_refresh" 
        android:title="@string/refresh_token"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"/>  
     
    <item android:id="@+id/action_logout" 
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"
        android:showAsAction="always"/> 
        
</menu>
