<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.networkservices.UserDetailsActivity" >
	
    <TextView
        android:id="@+id/tvNameUserDetailsActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/tvNickNameUserDetailsActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="16sp" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/nopicturepicture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowingCountText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/following_text" />

            <TextView
                android:id="@+id/tvFollowingCountNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/following_text" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowersCountText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers_text" />

            <TextView
                android:id="@+id/tvFollowersCountNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers_text" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSendTweetsCountText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"            
                android:text="@string/sendedTweets_text" />

            <TextView
                android:id="@+id/tvSendTweetsCountNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendedTweets_text" />

        </LinearLayout>
        

    </LinearLayout>

</LinearLayout>
